--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "1.0.0",
 	"minAppVersion": "1.0",
 	"description": "Render Tekken notation into an easy-to-read format (partially useful for other fighting games: Guilty Gear, Street Fighter and etc).",
-	"author": "Loac",
+	"author": "Dmitry Loac",
 	"authorUrl": "https://github.com/Loac",
 	"fundingUrl": "",
 	"isDesktopOnly": false
